@@ -1,6 +1,9 @@
 # ChangeLog for games-rpg/queen
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-rpg/queen/ChangeLog,v 1.8 2007/05/24 05:45:13 tupone Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-rpg/queen/ChangeLog,v 1.9 2007/07/05 20:01:20 corsair Exp $
+
+  05 Jul 2007; Markus Rothe <corsair@gentoo.org> queen-0-r1.ebuild:
+  Added ~ppc64; bug #183570
 
 *queen-0-r1 (24 May 2007)
 
